name:                vdian-sdk
version:             0.1.0.0
synopsis:            微店接口 SDK
description:         包装微店的接口, 及各种工具
license:             BSD3
license-file:        LICENSE
author:              Gilbert Fine
maintainer:          gilbert.fine@gmail.com
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/txkaduo/hs-vdian-sdk


Flag dev
    Description:   Turn on development settings
    Default:       False

Flag library-only
    Description:   Don't build command line tools.
    Default:       False

library
  exposed-modules:     VDian.Types
                       VDian.Method
                       VDian.Order
                       VDian.Cache
                       VDian

  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , time
                     , text
                     , bytestring
                     , unordered-containers
                     , aeson
                     , scientific
                     , persistent
                     , shakespeare
                     , blaze-html
                     , wreq
                     , lens
                     , monad-logger
                     , monad-control
                     , deepseq

  default-language:    Haskell2010

  if flag(dev) || flag(library-only)
      ghc-options:   -O0
  else
      ghc-options:   -O2

  ghc-options: -Wall -fwarn-tabs -fno-warn-partial-type-signatures

  default-extensions: TemplateHaskell
                      QuasiQuotes
                      OverloadedStrings
                      NoImplicitPrelude
                      CPP
                      MultiParamTypeClasses
                      TypeFamilies
                      GADTs
                      GeneralizedNewtypeDeriving
                      FlexibleContexts
                      FlexibleInstances
                      EmptyDataDecls
                      NoMonomorphismRestriction
                      DeriveDataTypeable
                      ViewPatterns
                      TupleSections
                      RecordWildCards
                      PartialTypeSignatures
                      ConstraintKinds
                      ExistentialQuantification
                      DeriveGeneric


executable         vdian-manage
  if flag(library-only)
      Buildable: False

  main-is:           manage.hs
  hs-source-dirs:    app
  build-depends:     classy-prelude
                   , vdian-sdk
                   , optparse-applicative >= 0.10
                   , monad-logger
                   , fast-logger
                   , bytestring
                   , yaml
                   , aeson
                   , wreq

  default-extensions:  NoImplicitPrelude
                       CPP
                       OverloadedStrings
                       TemplateHaskell
                       FlexibleContexts

  ghc-options: -Wall -fwarn-tabs -fno-warn-partial-type-signatures

  if flag(dev) || flag(library-only)
    ghc-options:  -O0
  else
    ghc-options:  -threaded -O2 -rtsopts -with-rtsopts=-N

  default-language:    Haskell2010
